# RealtimeCamera

./: FDN.py  JointCenterLoss.py  JointCenterLossV2.py  README.md  SelfAttentionAAE.py  install_packages.sh  layers.py  setup.sh  test_results1.csv  test_results2.csv
darknet/: Makefile  register  run_camera.sh
darknet/src/: camera.h  coco.c  image.c  yolo.c
dbn/: classifier.pkl  classifier_iguest.pkl
face_detector/: .Makefile.un~  .gitignore  .run_camera.sh.un~  .run_register.sh.un~  CMakeLists.txt  Makefile  bad.list  dump.rdb  predict.sh  run_camera.sh  save_face_dir.sh  test_sparse.sh  train_sparse.sh
face_detector/cfg/: yolo-face.cfg
face_detector/extractor/: ..gitignore.un~  .Makefile.un~  .gitignore  .test.c.un~  Makefile  README.md  bad.list
face_detector/extractor/data/labels/: make_labels.py
face_detector/extractor/scripts/: dice_label.sh  gen_tactic.sh  imagenet_label.sh  voc_label.py
face_detector/extractor/src/: .camera.c.un~  activation_kernels.cu  activation_layer.c  activation_layer.h  activations.c  activations.h  art.c  avgpool_layer.c  avgpool_layer.h  avgpool_layer_kernels.cu  batchnorm_layer.c  batchnorm_layer.h  blas.c  blas.h  blas_kernels.cu  box.c  box.h  camera.c  camera.h  captcha.c  cifar.c  classifier.c  classifier.h  cmake_install.cmake  coco.c  col2im.h  col2im_kernels.cu  compare.c  connected_layer.c  connected_layer.h  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.h  cost_layer.c  cost_layer.h  cpu_gemm.c  crnn_layer.c  crnn_layer.h  crop_layer.c  crop_layer.h  (+76 more)
face_detector/identifier/: ..gitignore.un~  .CMakeLists.txt.un~  .Makefile.un~  .gitignore  Classifier.cpp  Classifier.h  Common.h  Identifier.cpp  Lock.cpp  Lock.h  Log.cpp  Log.h  Looper.cpp  Looper.h  Makefile  Project.cbp  RedisIO.cpp  RedisIO.h  Thread.h  VectorClassFinder.cpp  VectorClassFinder.h  VectorNetSubscriber.cpp  VectorNetSubscriber.h  VectorQueue.cpp  VectorQueue.h  VectorSubscriber.cpp  VectorSubscriber.h  identifier.h
face_detector/models/: README.txt
face_detector/sparse/: Makefile  sparse.h  test.cpp  train.cpp  utils.cpp  utils.hpp
face_detector/src/: camera.c  cmake_install.cmake  demo.c  detector.c
face_identifier/: CMakeCache.txt  CMakeLists.txt  Classifier.cpp  Classifier.h  Common.h  Indentifier.cpp  Lock.cpp  Lock.h  Looper.cpp  Makefile  Project.cbp  RedisIO.cpp  RedisIO.h  Thread.h  VectorClassFinder.cpp  VectorClassFinder.h  VectorNetSubscriber.cpp  VectorQueue.cpp  VectorQueue.h  VectorSubscriber.h  cmake_install.cmake  identifier
face_recognizer/: .gitignore  cascaded_recognizer.py  cuda_grouped_recognizer1.sh  cuda_grouped_recognizer2.sh  cuda_recognizer.sh  get_tts.py  grouped_recognizer.py  recognizer.py  run.sh  run_tts.sh  tts.py
face_register/: .gitignore  add_new_user.py  augmentation.py  classifier.py  cron_training.sh  group_sampling.py  guest_sampling.py  notify_train.py  reps_checker.py  train.sh  train_dbn.sh  train_groups.sh
face_register/output/aligned/: cache.t7
face_register/output/embedding/: labels.csv  reps.csv
face_register/sparse/: sparse.src  sparse.test_list  sparse.train_list
openface/demos/web/: requirements.txt
robot/: .Makefile.un~  CMakeCache.txt  CMakeLists.txt  Makefile  bridge.c  bridge.h  cmake_install.cmake  robot  robot.c  robot.cbp  run_robot.sh
robot/node/: app.js  npm_install.sh  package.json
robot/node/public/: nodebusweb.js
robot/node/public/wilson_files/formoid1/: form.formoid  form.php  formoid-flat-green.css  formoid-flat-green.js  handler.php
robot/node/sample/: chch_lua.xml  complete.xml  exit.xml  info.xml  log.xml  logoff.xml  multi_lua.xml  onoff.xml
robot/node/wilson/: cli.js  clientlist.js  confirm.html  mgs.js  mgs_node.js  mgs_schema.js  nodebus.js  socket.js  starttest.js  stoptest.js  wilson.html  wilson.js
svm/: .gitignore  classifier.pkl  classifier_iguest.pkl  classifier_oguest.pkl
