cmake_minimum_required(VERSION 3.6)
project(darknet)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/activation_layer.c
        src/activation_layer.h
        src/activations.c
        src/activations.h
        src/art.c
        src/avgpool_layer.c
        src/avgpool_layer.h
        src/batchnorm_layer.c
        src/batchnorm_layer.h
        src/blas.c
        src/blas.h
        src/box.c
        src/box.h
        src/camera.c
        src/camera.h
        src/captcha.c
        src/cifar.c
        src/classifier.c
        src/classifier.h
        src/coco.c
        src/col2im.c
        src/col2im.h
        src/compare.c
        src/connected_layer.c
        src/connected_layer.h
        src/convolutional_layer.c
        src/convolutional_layer.h
        src/cost_layer.c
        src/cost_layer.h
        src/cpu_gemm.c
        src/crnn_layer.c
        src/crnn_layer.h
        src/crop_layer.c
        src/crop_layer.h
        src/cuda.c
        src/cuda.h
        src/darknet.c
        src/data.c
        src/data.h
        src/deconvolutional_layer.c
        src/deconvolutional_layer.h
        src/demo.c
        src/demo.h
        src/detection_layer.c
        src/detection_layer.h
        src/detector.c
        src/dice.c
        src/dropout_layer.c
        src/dropout_layer.h
        src/gemm.c
        src/gemm.h
        src/go.c
        src/gru_layer.c
        src/gru_layer.h
        src/im2col.c
        src/im2col.h
        src/image.c
        src/image.h
        src/layer.c
        src/layer.h
        src/list.c
        src/list.h
        src/local_layer.c
        src/local_layer.h
        src/matrix.c
        src/matrix.h
        src/maxpool_layer.c
        src/maxpool_layer.h
        src/network.c
        src/network.h
        src/nightmare.c
        src/normalization_layer.c
        src/normalization_layer.h
        src/option_list.c
        src/option_list.h
        src/parser.c
        src/parser.h
        src/region_layer.c
        src/region_layer.h
        src/reorg_layer.c
        src/reorg_layer.h
        src/rnn.c
        src/rnn_layer.c
        src/rnn_layer.h
        src/rnn_vid.c
        src/route_layer.c
        src/route_layer.h
        src/server.c
        src/server.h
        src/shortcut_layer.c
        src/shortcut_layer.h
        src/softmax_layer.c
        src/softmax_layer.h
        src/stb_image.h
        src/stb_image_write.h
        src/super.c
        src/swag.c
        src/tag.c
        src/tree.c
        src/tree.h
        src/utils.c
        src/utils.h
        src/voxel.c
        src/writing.c
        src/yolo.c
        src_new/activation_layer.c
        src_new/activation_layer.h
        src_new/activations.c
        src_new/activations.h
        src_new/art.c
        src_new/avgpool_layer.c
        src_new/avgpool_layer.h
        src_new/batchnorm_layer.c
        src_new/batchnorm_layer.h
        src_new/blas.c
        src_new/blas.h
        src_new/box.c
        src_new/box.h
        src_new/camera.c
        src_new/camera.h
        src_new/captcha.c
        src_new/cifar.c
        src_new/classifier.c
        src_new/classifier.h
        src_new/coco.c
        src_new/col2im.c
        src_new/col2im.h
        src_new/compare.c
        src_new/connected_layer.c
        src_new/connected_layer.h
        src_new/convolutional_layer.c
        src_new/convolutional_layer.h
        src_new/cost_layer.c
        src_new/cost_layer.h
        src_new/cpu_gemm.c
        src_new/crnn_layer.c
        src_new/crnn_layer.h
        src_new/crop_layer.c
        src_new/crop_layer.h
        src_new/cuda.c
        src_new/cuda.h
        src_new/darknet.c
        src_new/data.c
        src_new/data.h
        src_new/deconvolutional_layer.c
        src_new/deconvolutional_layer.h
        src_new/demo.c
        src_new/demo.h
        src_new/detection_layer.c
        src_new/detection_layer.h
        src_new/detector.c
        src_new/dice.c
        src_new/dropout_layer.c
        src_new/dropout_layer.h
        src_new/gemm.c
        src_new/gemm.h
        src_new/go.c
        src_new/gru_layer.c
        src_new/gru_layer.h
        src_new/im2col.c
        src_new/im2col.h
        src_new/image.c
        src_new/image.h
        src_new/layer.c
        src_new/layer.h
        src_new/list.c
        src_new/list.h
        src_new/local_layer.c
        src_new/local_layer.h
        src_new/matrix.c
        src_new/matrix.h
        src_new/maxpool_layer.c
        src_new/maxpool_layer.h
        src_new/network.c
        src_new/network.h
        src_new/nightmare.c
        src_new/normalization_layer.c
        src_new/normalization_layer.h
        src_new/option_list.c
        src_new/option_list.h
        src_new/parser.c
        src_new/parser.h
        src_new/region_layer.c
        src_new/region_layer.h
        src_new/reorg_layer.c
        src_new/reorg_layer.h
        src_new/rnn.c
        src_new/rnn_layer.c
        src_new/rnn_layer.h
        src_new/rnn_vid.c
        src_new/route_layer.c
        src_new/route_layer.h
        src_new/server.c
        src_new/server.h
        src_new/shortcut_layer.c
        src_new/shortcut_layer.h
        src_new/softmax_layer.c
        src_new/softmax_layer.h
        src_new/stb_image.h
        src_new/stb_image_write.h
        src_new/super.c
        src_new/swag.c
        src_new/tag.c
        src_new/tree.c
        src_new/tree.h
        src_new/utils.c
        src_new/utils.h
        src_new/voxel.c
        src_new/writing.c
        src_new/yolo.c)

add_executable(darknet ${SOURCE_FILES})