cmake_minimum_required(VERSION 3.6)
project(face_detector)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        extractor/src/activation_layer.c
        extractor/src/activation_layer.h
        extractor/src/activations.c
        extractor/src/activations.h
        extractor/src/art.c
        extractor/src/avgpool_layer.c
        extractor/src/avgpool_layer.h
        extractor/src/batchnorm_layer.c
        extractor/src/batchnorm_layer.h
        extractor/src/blas.c
        extractor/src/blas.h
        extractor/src/box.c
        extractor/src/box.h
        extractor/src/camera.c
        extractor/src/camera.h
        extractor/src/captcha.c
        extractor/src/cifar.c
        extractor/src/classifier.c
        extractor/src/classifier.h
        extractor/src/coco.c
        extractor/src/col2im.c
        extractor/src/col2im.h
        extractor/src/compare.c
        extractor/src/connected_layer.c
        extractor/src/connected_layer.h
        extractor/src/convolutional_layer.c
        extractor/src/convolutional_layer.h
        extractor/src/cost_layer.c
        extractor/src/cost_layer.h
        extractor/src/cpu_gemm.c
        extractor/src/crnn_layer.c
        extractor/src/crnn_layer.h
        extractor/src/crop_layer.c
        extractor/src/crop_layer.h
        extractor/src/cuda.c
        extractor/src/cuda.h
        extractor/src/darknet.c
        extractor/src/data.c
        extractor/src/data.h
        extractor/src/deconvolutional_layer.c
        extractor/src/deconvolutional_layer.h
        extractor/src/demo.c
        extractor/src/demo.h
        extractor/src/detection_layer.c
        extractor/src/detection_layer.h
        extractor/src/detector.c
        extractor/src/dice.c
        extractor/src/dropout_layer.c
        extractor/src/dropout_layer.h
        extractor/src/gemm.c
        extractor/src/gemm.h
        extractor/src/go.c
        extractor/src/gru_layer.c
        extractor/src/gru_layer.h
        extractor/src/im2col.c
        extractor/src/im2col.h
        extractor/src/image.c
        extractor/src/image.h
        extractor/src/layer.c
        extractor/src/layer.h
        extractor/src/list.c
        extractor/src/list.h
        extractor/src/local_layer.c
        extractor/src/local_layer.h
        extractor/src/matrix.c
        extractor/src/matrix.h
        extractor/src/maxpool_layer.c
        extractor/src/maxpool_layer.h
        extractor/src/network.c
        extractor/src/network.h
        extractor/src/nightmare.c
        extractor/src/normalization_layer.c
        extractor/src/normalization_layer.h
        extractor/src/option_list.c
        extractor/src/option_list.h
        extractor/src/parser.c
        extractor/src/parser.h
        extractor/src/region_layer.c
        extractor/src/region_layer.h
        extractor/src/reorg_layer.c
        extractor/src/reorg_layer.h
        extractor/src/rnn.c
        extractor/src/rnn_layer.c
        extractor/src/rnn_layer.h
        extractor/src/rnn_vid.c
        extractor/src/route_layer.c
        extractor/src/route_layer.h
        extractor/src/server.c
        extractor/src/server.h
        extractor/src/shortcut_layer.c
        extractor/src/shortcut_layer.h
        extractor/src/softmax_layer.c
        extractor/src/softmax_layer.h
        extractor/src/stb_image.h
        extractor/src/stb_image_write.h
        extractor/src/super.c
        extractor/src/swag.c
        extractor/src/tag.c
        extractor/src/tree.c
        extractor/src/tree.h
        extractor/src/utils.c
        extractor/src/utils.h
        extractor/src/voxel.c
        extractor/src/writing.c
        extractor/src/yolo.c
        identifier/Classifier.cpp
        identifier/Classifier.h
        identifier/Common.h
        identifier/Identifier.cpp
        identifier/Lock.cpp
        identifier/Lock.h
        identifier/Log.cpp
        identifier/Log.h
        identifier/Looper.cpp
        identifier/Looper.h
        identifier/RedisIO.cpp
        identifier/RedisIO.h
        identifier/Thread.h
        identifier/VectorClassFinder.cpp
        identifier/VectorClassFinder.h
        identifier/VectorNetSubscriber.cpp
        identifier/VectorNetSubscriber.h
        identifier/VectorQueue.cpp
        identifier/VectorQueue.h
        identifier/VectorSubscriber.cpp
        identifier/VectorSubscriber.h identifier/identifier.h)

add_executable(face_detector ${SOURCE_FILES})